--- a/style.css
+++ b/style.css
@@ -59,15 +59,13 @@ p{
 #home{
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
+    margin: 5px; 
+    padding: 5px;
     border: 2px solid black;
     border-radius: 10px;
-    background-color: #f2f2f2;
+    /* background-color: #f2f2f2; */
     color: black;
+    height: 75%;
 }
 #artifacts{
     font-family: 'Roboto', sans-serif;
@@ -92,9 +90,70 @@ p{
 }
 .navbar .nav-link {
     transition: color 0.5s ease;
-    color: black !important;
+    color: white !important;
 }
 
 .navbar .nav-link:hover {
     color: red !important;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #ADD8E6; /* Light blue */
+    overflow-x: hidden;
+
+    
+}
+
+.navbar, .navbar.navbar-light.bg-light {
+    background-color: #333 !important;
+    border-bottom: 2px solid #FFD700 !important; /* Gold */
+}
+
+
+
+.navbar a:hover {
+    color: #ddd !important;
+}
+
+.content {
+    width: 80%;
+    margin: 20px auto;
+}
+
+h1 {
+    color: #333;
+}
+
+p {
+    color: #666;
+    line-height: 1.6;
+}
+
+#Self {
+    width: 100%;
+    height: auto;
+}
+
+.footer {
+    background-color: #333;
+    color: #f4f4f4;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border-top: 2px solid #FFD700; /* Gold */
+}
+
+.footer a {
+    color: #f4f4f4;
+    margin: 0 10px;
+}
+
+.footer a:hover {
+    color: #ddd;
 }
